final change (need to fix % and dark mode for future

--- a/style.scss
+++ b/style.scss
@@ -169,5 +169,9 @@ input:checked + .slider:before {
       text-indent: -0.05rem;
       line-height: 05%;
     }
+
+    &--percent {
+      background-color: #F5F5F5;
+    }
   }
 }  
